--- a/locales/ru-RU.yml
+++ b/locales/ru-RU.yml
@@ -243,7 +243,7 @@ publishing: "Публикация"
 notResponding: "Нет ответа"
 instanceFollowing: "Подписанные на сайте"
 instanceFollowers: "Подписчики сайта"
-instanceUsers: "Пользователи сайтаа"
+instanceUsers: "Пользователи сайта"
 changePassword: "Изменить пароль"
 security: "Безопасность"
 retypedNotMatch: "Не совпадают"
@@ -333,8 +333,8 @@ unwatch: "Отписаться"
 accept: "Принять"
 reject: "Отклонить"
 normal: "Стабильно"
-instanceName: "Название сайтаа"
-instanceDescription: "Описание сайтаа"
+instanceName: "Название сайта"
+instanceDescription: "Описание сайта"
 maintainerName: "Имя администратора"
 maintainerEmail: "Электронная почта администратора"
 tosUrl: "Ссылка на пользовательское соглашение"
@@ -612,6 +612,7 @@ emailServer: "Сервер электронной почты"
 enableEmail: "Включить обмен электронной почтой"
 emailConfigInfo: "Используется для подтверждения адреса электронной почты и сброса пароля."
 email: "Электронная почта"
+lastActiveDate: "Последняя активность"
 emailAddress: "Адрес электронной почты"
 smtpConfig: "Конфигурация SMTP-сервера"
 smtpHost: "Хост"
@@ -844,6 +845,7 @@ ffVisibility: "Видимость подписок и подписчиков"
 ffVisibilityDescription: "Здесь можно настроить, кто будет видеть ваши подписки и подписчиков."
 continueThread: "Показать следующие ответы"
 deleteAccountConfirm: "Учётная запись будет безвозвратно удалена. Подтверждаете?"
+deleteAccount: "Удалить аккаунт"
 incorrectPassword: "Пароль неверен."
 voteConfirm: "Отдать голос за «{choice}»?"
 hide: "Спрятать"
