--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -868,7 +868,7 @@ document: "Documentation"
 numberOfPageCache: "Number of cached pages"
 numberOfPageCacheDescription: "Increasing this number will improve convenience for users but cause more server load as well as more memory to be used."
 logoutConfirm: "Really log out?"
-lastActiveDate: "Последняя активность"
+lastActiveDate: "Recently activities"
 statusbar: "Status bar"
 pleaseSelect: "Select an option"
 reverse: "Reverse"
@@ -879,7 +879,7 @@ type: "Type"
 speed: "Speed"
 slow: "Slow"
 fast: "Fast"
-sensitiveMediaDetection: "Detection of NSFW media"
+sensitiveMediaDetection: "Удалять нежелательные видео"
 localOnly: "Local only"
 remoteOnly: "Remote only"
 failedToUpload: "Upload failed"
