--- a/locales/ru-RU.yml
+++ b/locales/ru-RU.yml
@@ -120,6 +120,7 @@ followRequest: "Запрос на подписку"
 followRequests: "Запросы на подписку"
 unfollow: "Отписаться"
 followRequestPending: "Нерассмотренный запрос на подписку"
+sended: "Запрос отправлен"
 enterEmoji: "Введите эмодзи"
 renote: "Репост"
 unrenote: "Отмена репоста"
@@ -866,6 +867,10 @@ searchByGoogle: "Поиск"
 instanceDefaultLightTheme: "Светлая тема по умолчанию"
 instanceDefaultDarkTheme: "Темная тема по умолчанию"
 indefinitely: "вечно"
+tenMinutes: "на 10 минут"
+oneHour: "на час"
+oneDay: "на день"
+oneWeek: "на неделю"
 file: "Файлы"
 recommended: "Рекомендуем"
 check: "Проверить"
