--- a/locales/ru-RU.yml
+++ b/locales/ru-RU.yml
@@ -1237,7 +1237,7 @@ _widgets:
   calendar: "Календарь"
   trends: "Актуальное"
   clock: "Часы"
-  rss: "Новоти"
+  rss: "Новости"
   rssTicker: "Лента новостей"
   activity: "Активность"
   photos: "Фото"
@@ -1249,8 +1249,8 @@ _widgets:
   onlineUsers: "Пользователи сейчас с сети"
   jobQueue: "Очередь заданий"
   serverMetric: "Показатели сервера"
-  aiscript: "Консоль AiScript"
-  aichan: "Ай"
+  # aiscript: "Консоль AiScript"
+  # aichan: "Ай"
 _cw:
   hide: "Спрятать"
   show: "Показать еще"
