--- a/locales/ru-RU.yml
+++ b/locales/ru-RU.yml
@@ -12,14 +12,14 @@ _preferencesBackups:
   loadFile: "Загрузка из файла"
   apply: "Применить к этому устройству"
   save: "Сохранить изменения"
-  inputName: "Пожалуйста, введите имя для новой резервной копии"
+  inputName: "Введите имя для новой резервной копии"
   cannotSave: "Ошибка сохранения"
   nameAlreadyExists: "Резервная копия \"{name}\" уже существует. Пожалуйста, введите другое имя."
   applyConfirm: "Вы действительно хотите применить резервную копию \"{name}\" к этому устройству? Существующие настройки этого устройства будут перезаписаны."
   saveConfirm: "Сохранить резервную копию как {name}?"
   deleteConfirm: "Удалить резервную копию {name}?"
   renameConfirm: "Переименовать эту резервную копию из \"{old}\" в \"{new}\"?"
-  noBackups: "Резервных копий не существует. Вы можете создать резервную копию настроек вашего клиента на этом сервере, \"Сохранить новую резервную копию\"."
+  noBackups: "Резервных копий не существует. Вы можете создать резервную копию настроек, нажав: \"Сохранить новую резервную копию\"."
   createdAt: "Создано: {date} {time}"
   updatedAt: "Обновлено: {date} {time}"
   cannotLoad: "Ошибка загрузки"
@@ -32,6 +32,7 @@ headlineSpeechka: "Жги, если не отсырел!"
 introSpeechka: "Добро пожаловать! Speechka — это сервис микроблогов.\nПишите «заметки» — делитесь со всеми происходящим вокруг или рассказывайте о себе 📡\nСтавьте «реакции» — выражайте свои чувства и эмоции от заметок других 👍\nОткройте для себя новый мир 🚀"
 monthAndDay: "{day}.{month}"
 search: "Поиск"
+warningbeta: Внимание! Данный сайт находится в beta версии. Любые данные могут быть удалены из-за нестабильности системы.
 notifications: "Уведомления"
 username: "Имя пользователя"
 password: "Пароль"
@@ -143,6 +144,8 @@ attachCancel: "Удалить вложение"
 markAsSensitive: "Отметить как «не для всех»"
 unmarkAsSensitive: "Снять отметку «не для всех»"
 enterFileName: "Введите имя файла"
+deleteAccountConfirm: "Это приведет к необратимому удалению учетной записи. Продолжить?"
+typeToConfirm: "Введите {x} что бы продолжить"
 mute: "Скрыть"
 unmute: "Отменить скрытие"
 block: "Заблокировать"
@@ -496,7 +499,7 @@ existingAccount: "Существующая учётная запись"
 regenerate: "Создать повторно"
 fontSize: "Размер шрифта"
 noFollowRequests: "Нерассмотренные запросы на подписку отсутствуют"
-openImageInNewTab: "Открыть изображение в новой вкладке"
+openImageInNewTab: "Открывать изображение в новой вкладке"
 dashboard: "Панель управления"
 local: "С этого сайта"
 remote: "С других сайтов"
@@ -742,7 +745,7 @@ saveConfirm: "Сохранить изменения?"
 deleteConfirm: "Удалить?"
 invalidValue: "Недопустимое значение."
 registry: "Реестр"
-closeAccount: "Закрыть учётную запись"
+closeAccount: "Удалить учётную запись"
 currentVersion: "Используемая версия"
 latestVersion: "Самая свежая версия"
 youAreRunningUpToDateClient: "У вас самая свежая версия клиента."
@@ -811,7 +814,7 @@ previewNoteText: "Предварительный просмотр"
 customCss: "Индивидуальный CSS"
 customCssWarn: "Используйте эту настройку только если знаете, что делаете. Ошибки здесь чреваты тем, что сайт перестанет нормально работать у вас."
 global: "Всеобщая"
-squareAvatars: "Квадратные аватарки"
+squareAvatars: "Использовать квадратные аватарки"
 sent: "Отправить"
 received: "Получено"
 searchResult: "Результаты поиска"
