--- a/locales/ru-RU.yml
+++ b/locales/ru-RU.yml
@@ -144,7 +144,7 @@ attachCancel: "Удалить вложение"
 markAsSensitive: "Отметить как «не для всех»"
 unmarkAsSensitive: "Снять отметку «не для всех»"
 enterFileName: "Введите имя файла"
-deleteAccountConfirm: "Это приведет к необратимому удалению учетной записи. Продолжить?"
+# deleteAccountConfirm: "Это приведет к необратимому удалению учетной записи. Продолжить?"
 typeToConfirm: "Введите {x} что бы продолжить"
 mute: "Скрыть"
 unmute: "Отменить скрытие"
