tutorial | timeline fix

--- a/locales/ru-RU.yml
+++ b/locales/ru-RU.yml
@@ -1149,9 +1149,9 @@ _time:
 _tutorial:
   title: "Как пользоваться Speechka"
   step1_1: "Добро пожаловать!"
-  step1_2: "Эта страница называется «лента». Здесь будут появляться «заметки»: ваши личные и тех, на кого вы «подписаны». Они будут располагаться в порядке времени их появления."
-  step1_3: "Правда, ваша лента пока пуста. Она начнёт заполняться, когда вы будете писать свои заметки и подписываться на других."
-  step2_1: "Давайте, заполним профиль, прежде чем начать писать заметки и подписываться на других."
+  step1_2: "Эта страница называется «лента». Их существует 2 типа: домашняя и всеобщая."
+  step1_3: "В домашней ленте (где Вы сейчас находитесь), размещаются Ваши заметки. Они будут видны Вам, и Вашим подписчикам."
+  step1_4: "На всеобщей ленте будут отображаться заметки всех пользователей. При выкладывании заметки в эту ленту её будут видеть все пользователи."
   step2_2: "То, что вы расскажете в профиле, поможет лучше вас узнать, а значит, многим будет легче присоединиться — вы скорее получите новых подписчиков и читателей."
   step3_1: "Успешно заполнили профиль?"
   step3_2: "Что ж, теперь самое время опубликуовать заметку. Если нажать вверху страницы на изображение карандаша, появится форма для текста."
@@ -1286,7 +1286,7 @@ _visibility:
   publicDescription: "Открыто для всех"
   home: "Домашняя"
   homeDescription: "Не для общих лент"
-  homeNotes: "Заметка для себя"
+  homeNotes: "Заметка для себя и подписчиков"
   followers: "Для подписчиков"
   followersDescription: "Только вашим подписчикам"
   specified: "Личное"
